--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Open+Sans&display=swap"
-    rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-3npys1xKuk9I7/KpvuB5+VlZp+PB6dpGWdWZc9qF2IvthIYpx0sylR4FXJaOov7kPGwxn2Dbge9SDOQwMzynw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Vite + React + TS</title>
 </head>
 
